Fixed issue with About button on index.html stuck on top menu bar. Issue: styling applied to ALL buttons, causing unintended movement of of the About button on index.html.

--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ body{
 }
 
 /* Styles for the button */
-button {
+.movebutton {
   width: 50px;
   height: 50px;
   position: absolute;
